--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ logs/
 .DS_Store
 .vscode
 *.swp
-*.lock
-*.js
+# *.lock
+# *.js
 !.autod.conf.js
 
 app/**/*.js
@@ -19,4 +19,5 @@ app/**/*.map
 test/**/*.map
 config/**/*.map
 
-/secret.ts
+secret.ts
+db
